# discord

./: .env.sample  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  mypy.yml  pre-commit.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 6ba19f2c73c4_create_tickets_table.py  cf5491e3f4d5_initial.py  e17d69a720f2_initial_migration.py  f705df78a1eb_add_tickets_table_and_ticket_column_in_.py
bot/: __main__.py  assign_role.py  bot.py  cog.py  config.py  db.py  exceptions.py  messages.py  models.py  reactions.py  roles.py  sanitizers.py  senders.py  ticket_cog.py  utility_cog.py  utility_tasks.py  welcome_and_coc_cog.py
bot/modals/: ticket_modal.py
bot/services/: ticket_services.py
bot/validations/: ticket_validation.py
bot/views/: base_view.py  ticket_view.py
tests/: conftest.py  test___main__.py  test_bot.py  test_cog.py  test_config.py  test_db.py  test_integration.py  test_models.py
